--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,23 +1,15 @@
 {
-	"name": "Crispy2d",
-	"version": "1.1",
-	"description": "Force nearest-neighbor scaling on retro-gaming sites",
+	"name": "Crispy2dPixelJoint",
+	"version": "1.0",
+	"description": "Force nearest-neighbor scaling on PixelJoint",
 	"icons": {
 		"128": "icon128.png",
 		"16": "icon16.png",
 		"48": "icon48.png"
 	},
 	"permissions": [
-		"tabs", 
-		"http://*.hol.abime.net/*",
-		"http://*.lemonamiga.com/*",
-		"http://*.mobygames.com/*",
-		"http://*.vgmuseum.com/*",
-		"http://*.arcade-museum.com/*",
-		"http://*.mamedev.emulab.it/*",
-		"http://*.mameworld.info/*",
-		"http://*.mamedev.org/*",
-		"http://*.gamebase64.com/*"
+		"tabs",
+		"http://*.pixeljoint.com/*"
 	],
 	"content_scripts": [
 		{
